k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ahrenix-service

spec:
  selector:
    app: ahrenix-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: LoadBalancer
